Infra/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: /grafana
            backend:
              service:
                name: grafana
                port:
                  number: 80
          - pathType: Prefix
            path: /loki
            backend:
              service:
                name: loki-stack
                port:
                  number: 3100
          - pathType: Prefix
            path: /prometheus
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port:
                  number: 9090
          - pathType: Prefix
            path: /prom-grafana
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
